<resources>
    <string name="app_name">广运通货主版</string>
    <string name="home">首页</string>
    <string name="work">工作台</string>
    <string name="my">我的</string>
    <string name="home_examine">待审核</string>
    <string name="home_reexamine">待复审</string>
    <string name="home_pass">已通过</string>
    <string name="refresh_header_failed">刷新失败</string>
    <string name="refresh_header_finish">刷新完成</string>
    <string name="refresh_header_loading">等待底部加载完成…</string>
    <string name="refresh_header_pulling">下拉可刷新</string>
    <string name="refresh_header_refreshing">刷新中…</string>
    <string name="refresh_header_release">释放立即刷新</string>
    <string name="refresh_header_secondary">释放进入二楼</string>
    <string name="refresh_header_update">上次更新 M-d HH:mm</string>
    <string name="refresh_footer_failed">加载失败</string>
    <string name="refresh_footer_finish">加载完成</string>
    <string name="refresh_footer_loading">正在加载…</string>
    <string name="refresh_footer_nothing">没有更多数据了</string>
    <string name="refresh_footer_pulling">上拉加载更多</string>
    <string name="refresh_footer_refreshing">等待头部刷新完成…</string>
    <string name="refresh_footer_release">释放立即加载</string>
    <string name="subsidiary_management">子公司管理</string>
    <string name="user_management">用户管理</string>
    <string name="setting">设置</string>
    <string name="contract_num">合同编号：1</string>
    <string name="contract_num_desc">合同编号:</string>
    <string name="contract_num_content">合同编号</string>
    <string name="base_info">基本信息</string>
    <string name="wait_examine">待审核</string>
    <string name="contract_purchase_company">采购方：A</string>
    <string name="contract_sale_company">销售方：A</string>
    <string name="examine">审核</string>
    <string name="update_time">更新时间：A</string>
    <string name="record_time">录入时间：A</string>
    <string name="record_time_desc">录入时间：</string>
    <string name="update_time_desc">更新时间：</string>
    <string name="app_versions">集团版</string>
    <string name="app_support_desc">广纳集团提供技术支持</string>
    <string name="login">登录</string>
    <string name="gyx_version">广运通集团版</string>
    <string name="login_contact_phone">联系平台 400-720-9888</string>
    <string name="please_input_phone">请输入登录帐号</string>
    <string name="please_input_password">请输入登录密码</string>
    <string name="login_privacy">我已阅读并同意《隐私权政策》</string>
    <string name="star_tag">*</string>
    <string name="login_phone_or_pwd_error">账号密码输入有误</string>
    <string name="please_check_privacy">请勾选隐私政策！</string>
    <string name="hint">提示</string>
    <string name="contact_phone">联系客服：400-720-9888</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="contract">合同</string>
    <string name="note_taking">录单</string>
    <string name="please_input_materiel_name">请输入物料名称</string>
    <string name="materiel_colon">物料：</string>
    <string name="materiel_num">物料编号：A</string>
    <string name="materiel_name">A - B(C)</string>
    <string name="materiel_type_and_count">A\t | \t 数量：B C</string>
    <string name="modify_materiel">修改物料</string>
    <string name="materiel_management">物料管理</string>
    <string name="materiel_add">添加物料</string>
    <string name="nfc_push">A推送</string>
    <string name="materiel_create_date">A 创建</string>
    <string name="delete">删除</string>
    <string name="materiel_mold">物料类型</string>
    <string name="please_select_materiel_mold">请选择物料类型</string>
    <string name="please_select_materiel">请选择物料</string>
    <string name="please_input_unit_price">请输入单价</string>
    <string name="please_input_amount">请输入合同金额</string>
    <string name="unit_price">单\u3000\u3000价</string>
    <string name="contract_amount">合同金额</string>
    <string name="contract_gross_amount">合同总量</string>
    <string name="contract_balance">合同余额</string>
    <string name="contract_shipped_traffic">已发运量</string>
    <string name="contract_surplus_traffic">剩余运量</string>
    <string name="please_input_contract_gross_amount">请输入合同总量</string>
    <string name="unit_yuan">元</string>
    <string name="unit_ton">吨</string>
    <string name="materiel">物\u3000\u3000料</string>
    <string name="select_materiel_mold">选择物料类型</string>
    <string name="materiel_designation">物料名称</string>
    <string name="please_input_materiel_designation">请输入物料名称</string>
    <string name="materiel_code">物料编码</string>
    <string name="please_input_materiel_code">请输入物料编码</string>
    <string name="materiel_unit">物料单位</string>
    <string name="please_select_materiel_unit">请选择物料单位</string>
    <string name="select_materiel_unit">选择物料单位</string>
    <string name="types_of_coal">煤炭种类</string>
    <string name="please_select_types_of_coal">请选择煤炭种类</string>
    <string name="select_types_of_coal">选择煤炭种类</string>
    <string name="coal_variety">煤炭品种</string>
    <string name="please_select_coal_variety">请选择煤炭品种</string>
    <string name="select_coal_variety">选择煤炭品种</string>
    <string name="materiel_desc">物料描述</string>
    <string name="please_input_materiel_desc">请输入物料描述</string>
    <string name="numbered_fields_are_required">带*号的为必填项</string>
    <string name="add">添加</string>
    <string name="modify">提交</string>
    <string name="no_data">什么也没有</string>
    <string name="network_error">网络似乎出问题了</string>
    <string name="try_refresh">刷新试试</string>
    <string name="setting_user">个人信息</string>
    <string name="setting_sign_out">账户注销</string>
    <string name="setting_pwd">登录密码设置</string>
    <string name="setting_login_out">退出登录</string>
    <string name="contract_title">合同管理</string>
    <string name="new_contract">新建合同</string>
    <string name="new_purchase_contract">新建采购合同</string>
    <string name="new_sale_contract">新建销售合同</string>
    <string name="contract_search_hint">请输入合同编号、物料名称、供应方、采购方</string>
    <string name="examine_contract">审核合同</string>
    <string name="purchase_contract">采购合同</string>
    <string name="sale_contract">销售合同</string>
    <string name="out_materiel">外部物料：A</string>
    <string name="account_balance">账户余额：A</string>
    <string name="please_select_purchaser">请选择采购方</string>
    <string name="please_select_sale">请选择销售方</string>
    <string name="settlement_information">结算信息</string>
    <string name="pay_type">付款类型</string>
    <string name="please_select_pay_type">请选择付款类型</string>
    <string name="settlement_basis">结算依据</string>
    <string name="please_select_settlement_basis">请选择结算依据</string>
    <string name="transportation_loss">运输损耗</string>
    <string name="please_select_transportation_loss">请选择运输损耗</string>
    <string name="regardless_of_loss">不计损耗</string>
    <string name="sample_or_not">是否采样</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="whether_tax_is_included">是否含税</string>
    <string name="tax_rate">税\u3000\u3000率</string>
    <string name="contract_remark">备\u3000\u3000注</string>
    <string name="please_input_tax_rate">请输入税率</string>
    <string name="billing_information">开票信息</string>
    <string name="please_select_billing_information">请选择开票信息</string>
    <string name="carrier">承&#160;&#160;运&#160;&#160;方</string>
    <string name="please_select_carrier">请选择承运方</string>
    <string name="supplier">供应方</string>
    <string name="assay_scheme">化验方案</string>
    <string name="please_select_assay_scheme">请选择化验方案</string>
    <string name="date_of_signing">签订日期</string>
    <string name="please_select_date_of_signing">请选择签订日期</string>
    <string name="effective_date">生效日期</string>
    <string name="please_select_effective_date">请选择生效日期</string>
    <string name="price_per_ton">涨吨单价</string>
    <string name="please_input_price_per_ton">请输入涨吨单价</string>
    <string name="tonnage_increase">涨吨数量</string>
    <string name="please_input_tonnage_increase">请输入涨吨数量</string>
    <string name="unit_price_of_lost_ton">亏吨单价</string>
    <string name="please_input_unit_price_of_lost_ton">请输入亏吨单价</string>
    <string name="lost_tonnage">亏吨数量</string>
    <string name="please_input_lost_tonnage">请输入亏吨数量</string>
    <string name="marketing_purpose">销售用途</string>
    <string name="please_select_marketing_purpose">请选择销售用途</string>
    <string name="contract_file">合同文件</string>
    <string name="please_up_contract_file">请上传合同文件</string>
    <string name="remark">备注</string>
    <string name="remark_desc">备注描述</string>
    <string name="please_input_remark">请输备注信息</string>
    <string name="zero_float">0.00</string>
    <string name="save">保存</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="search">搜索</string>
    <string name="contract_info">合同信息</string>
    <string name="contract_detail">合同详情</string>
    <string name="contract_examine">合同审核</string>
    <string name="adjust_quantity">调整货量</string>
    <string name="adjust_price">调价</string>
    <string name="contract_adjust_quantity">调整合同货量</string>
    <string name="contract_adjust_price">调价合同</string>
    <string name="pass">通过</string>
    <string name="examine_no_pass">审核不通过</string>
    <string name="examine_desc">审核描述</string>
    <string name="please_input_examine_desc">请输入审核描述</string>
    <string name="modify_single_price">修改单价</string>
    <string name="please_input_modify_single_price">请输入修改后单价</string>
    <string name="modify_inventory">修改库存</string>
    <string name="plan_adjust_price">计划调价</string>
    <string name="once_adjust_price">立即调价</string>
    <string name="execution_unit_price">执行单价</string>
    <string name="please_choose_time">请选择时间</string>
    <string name="contract_quantity">合同货量</string>
    <string name="plant_title">创建计划</string>
    <string name="new_plant_title">新建计划</string>
    <string name="basic_msg">基础信息</string>
    <string name="route_name">线路名称</string>
    <string name="please_input_route">请选择线路名称</string>
    <string name="transportation_distance">运输距离 (km)</string>
    <string name="please_input_transportation_distance">请输入运输距离</string>
    <string name="please_input_supervisory_address">请选择监管地址</string>
    <string name="supervisory_address">监管地址</string>
    <string name="cargo_name">货物名称</string>
    <string name="increase_quantity">涨吨数量</string>
    <string name="loss_quantity">亏吨数量</string>
    <string name="signature_type">签收方式</string>
    <string name="select_signature_type">请选择签收方式</string>
    <string name="deduct_type">扣款方式</string>
    <string name="select_deduct_type">请选择扣款方式</string>
    <string name="weighing_type">计重方式</string>
    <string name="select_weighing_type">请选择计重方式</string>
    <string name="transport_name">承运人名称</string>
    <string name="transport_message">承运人信息</string>
    <string name="please_input_transport_name">请选择承运人</string>
    <string name="allotment_name">分配份额</string>
    <string name="allotment_acquiesce">默认共享份额</string>
    <string name="effective_time">生效时间</string>
    <string name="single_price">单价</string>
    <string name="modify_contract_amount">修改合同货量</string>
    <string name="input_modify_contract_amount_hint">追加填正数，减少填负数</string>
    <string name="effect_time_desc">生效时间：A</string>
    <string name="create_time_desc">录单时间：A</string>
    <string name="materiel_type_and_price">A\t | \t 价格：B C</string>
    <string name="contract_adjust_record">调价记录</string>
    <string name="select_settle_type">结算类型</string>
    <string name="waybill_num">运单号：A</string>
    <string name="dispatcher">调度员：A</string>
    <string name="send_order_time_desc">派单时间：</string>
    <string name="loss_growth_weight">亏涨量(吨)</string>
    <string name="unload_weight">卸货量(吨)</string>
    <string name="send_order_weight">派单量(吨)</string>
    <string name="all_client">全部客户</string>
    <string name="all_materiel">全部物料</string>
    <string name="all_factory">全部厂区</string>
    <string name="please_select_client">请选择供应商</string>
    <string name="please_select_factory">请选择厂区</string>
    <string name="please_select_settle_type">请选择结算类型</string>
    <string name="send_price">运费单价</string>
    <string name="send_type">配送方式</string>
    <string name="please_select_send_type">请选择配送方式</string>
</resources>