<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_solid_white_8"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/viewBuleLine"
            android:layout_width="2dp"
            android:layout_height="16dp"
            android:layout_marginStart="11dp"
            android:background="@drawable/shape_blue_line_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContractNumDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:includeFontPadding="false"
            android:text="@string/base_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/viewBuleLine"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.gxy.common.view.InputLayout
        android:id="@+id/inputMateriel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:input_hint="@string/please_select_materiel"
        app:is_input="false"
        app:is_requireds="true"
        app:show_search_box="true"
        app:is_need_show_bottom_dialog="true"
        app:layout_constraintTop_toBottomOf="@+id/clTitle"
        app:title="@string/materiel" />


    <com.gxy.common.view.InputLayout
        android:id="@+id/inputUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hase_unit="true"
        app:input_hint="@string/please_input_unit_price"
        app:is_input="true"
        android:inputType="numberDecimal"
        app:is_requireds="true"
        app:layout_constraintTop_toBottomOf="@+id/inputMateriel"
        app:title="@string/unit_price"
        app:unit_content="@string/unit_yuan" />

    <com.gxy.common.view.InputLayout
        android:id="@+id/inputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hase_unit="true"
        app:input_hint="@string/please_input_amount"
        app:is_input="true"
        app:is_requireds="true"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/inputUnitPrice"
        app:title="@string/contract_amount"
        app:unit_content="@string/unit_yuan" />

    <com.gxy.common.view.InputLayout
        android:id="@+id/inputGrossAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hase_unit="true"
        app:input_hint="@string/please_input_contract_gross_amount"
        app:is_input="true"
        android:inputType="numberDecimal"
        app:is_requireds="true"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount"
        app:title="@string/contract_gross_amount"
        app:unit_content="@string/unit_ton" />

</androidx.constraintlayout.widget.ConstraintLayout>